# dfes-feeds

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
experiments/: soup.py
src/dfes/: analyze.py  bans.py  commands.py  date_time.py  datetime.py  exceptions.py  feeds.py  fetch.py  fire_bans.py  fire_danger.py  ingest.py  migrate.py  model.py  parser.py  reports.py  repository.py  services.py  show.py  store.py  urls.py
src/extract/: datetime.py
tests/: conftest.py  generate.py  jinja.py  test_analyse.py  test_aquire.py  test_bans.py  test_date_time.py  test_extract.py  test_feeds.py  test_fetch.py  test_fire_bans.py  test_fire_danger.py  test_generate.py  test_ingest.py  test_integration.py  test_migrate.py  test_parser.py  test_repository.py  test_services.py  test_show.py  test_store.py  test_templates.py  test_tmp_path.py
tests/data/: fire_ban_example.html  minimal.rss
tests/data/2023-01-03/: message.rss  message_FDR.rss  message_TFB.rss
tests/data/2023-10-11/: message_FDR.rss  message_TFB.rss
tests/data/2023-10-14/: message_FDR.rss  message_TFB.rss
tests/data/2023-10-16/: message_FDR.rss  message_TFB.rss
tests/data/entries/: entry-0.txt  entry-1.txt  entry-2.txt  entry-3.txt
tests/templates/: bad_summary.xml  bans.xml  bans_no_entry.xml  bans_one_entry.xml  description.html  locations.html  new_bans.xml  no_bans.xml  revoked.xml  summary.html
