[project]
name = "dfes-rss"
version = "0.0.1"
authors = [
  { name="Ajahn Jhanarato", email="jhanarato@gmail.com" },
]
description = "API for the DFES of WA"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jhanarato/firefeed-wa"
"Bug Tracker" = "https://github.com/jhanarato/firefeed-wa/issues"
