[tool.poetry]
name = "dfes-feeds"
version = "0.2.3"
description = "CLI for WA Department of Emergency Services"
authors = ["Ajahn Jhanarato <jhanarato@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "dfes", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
feedparser = "^6.0.11"
click = "^8.1.7"
requests = "^2.31.0"
Jinja2 = "^3.1.2"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
responses = "^0.24.1"
pytest-responses = "^0.5.1"
polars = "^0.20.3"

[tool.poetry.scripts]
dfes = 'dfes.commands:dfes'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
